Fix background image URL case sensitivity

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ div {
 /*Raphael Title Bar*/
 
 .titlebar {
-    background-image: url("images/kaleidosphoto1.jpeg");
+    background-image: url("images/Kaleidosphoto1.jpeg");
     display:flex;
     align-items:center;
     background-size:cover;
